--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<h2>Project</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/1_01.png" alt="" /></a>
 								<h3>자바 콘솔 프로젝트</h3>
 								<p>Java 파일 입출력을 이용한 사내 관리 시스템</p>
 								<!-- <a href="web/oracle.pdf" class="button small fit" download=""><i class="fas fa-file-download"></i>  프로젝트 요약본 PDF</a> -->
