--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
 					<a href="#" class="image avatar"><img src="images/face.png" alt="" /></a>
 					<h1><strong style="font-size: 28px;">김다인</strong><br />
 					1997.08.25<br />
-					배화여자대학교 패션산업과<br />
-					주식회사 실론 테크니컬 디자이너<br />
-					High-End 의류제조기술자 양성과정 수료<br />
-					DIAN 샘플실 창업<br />
-					쌍용교육센터 '자바웹 개발자 과정' 수료 예정<br />
+					00대학교 00산업과<br />
+					쌍용교육센터 '자바 웹 개발자 과정' 수료 예정<br />
 					<br /></h1>
 				</div>
 			</header>
@@ -48,35 +45,42 @@
 					<section id="skill">
 						<h2>skill</h2>
 						사용 할 수 있는 스킬
-						<i class="fab fa-html5"></i>
-						<i class="fab fa-css3"></i>
+						<div>							
+							<i class="fab fa-html5"></i>
+							<i class="fab fa-css3"></i>
+							<i class="fab fa-js-square"></i>
+							<i class="fab fa-java"></i>
+
+						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
 						<h2>Project</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/1_01.png" alt="" /></a>
-								<h3>자바 콘솔 프로젝트</h3>
+								<a href="https://www.notion.so/test-58081140aad642acbab9942a0c4e2db2?showMoveTo=true" class="image fit thumb" target="_blank"><img src="images/thumbs/1_01.png" alt="" /></a>
+								<h3 class="projectTitle">자바 콘솔 프로젝트</h3>
 								<p>Java 파일 입출력을 이용한 사내 관리 시스템</p>
+								​<ul class="actions" style="margin-left: 10em; margin-bottom: 4em;">
+									<li><a href="#" class="button">자세히 보기</a></li>
+									<li><a href="#" class="button icon solid fa-download">PDF</a></li>
+								</ul>
+									
 								<!-- <a href="web/oracle.pdf" class="button small fit" download=""><i class="fas fa-file-download"></i>  프로젝트 요약본 PDF</a> -->
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+
+
+								<a href="images/fulls/02.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/1_02.png" alt="" /></a>
 								<h3>교육센터 운영 프로그램</h3>
 								<p>데이터 베이스 설계 및 구축 프로젝트 </p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>프로젝트3</h3>
+
+								<a href="images/fulls/03.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3>임시 프로젝트 제목</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>프로젝트4</h3>
+
+								<a href="images/fulls/04.jpg" class="image fit thumb" target="_blank"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>임시 프로젝트 제목</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
@@ -88,15 +92,14 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article> -->
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						<!-- <ul class="actions">
+							<li><a href="#" class="button">Project </a></li>
+						</ul> -->
 					</section>
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>피드백 또는 궁금한 점 있으시다면 연락주세요:) 빠른 시일내에 답장드리겠습니다.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -114,15 +117,15 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										서울특별시.<br /><br />
+										서울특별시.<br />
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										010-6259-3293
+										010-0000-0000
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">kds6877@naver.com</a>
+										<a href="#">000@naver.com</a>
 									</li>
 								</ul>
 							</div>
